--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="tabs__nav">
     <ul class="tabs__list">
         <li data-tab="tab-1" class="tabs__item">Cat in the space</li>
-        <li data-tab="tab-2" class="tabs__item">Cat withe a girle</li>
+        <li data-tab="tab-2" class="tabs__item">Cat with a girle</li>
         <li data-tab="tab-3" class="tabs__item">Strawberry club</li>
         <li data-tab="tab-4" class="tabs__item">A big cat(tiger)</li>
     </ul>
@@ -161,7 +161,7 @@
   <h1>THE END</h1>
 </div>
 <div class="ends">
-  <h3>prod. by Nastia</h3>
+  <h3 style="margine-bottom: 35px">prod. by Nastia</h3>
 </div>
 <script src="./js/script.js"></script>
 </body>
