--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Cactus+Classical+Serif&display=swap');
+  </style>
   <title>My Pinterest</title>
 </head>
 <body>
