--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 
 <div class="slider-container">
-  <h1>4 aulbom: korean andergraund</h1>
+  <h1>4 aulbom: korean underground</h1>
   <div class="slider">
     <img src="./images/крутый винченцо.png" alt="cool">
     <img src="./images/фан винченцо.png" alt="Рыжий пушистый кот в джинсах">
